<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="25dp"
   >



        <ImageView
            android:id="@+id/userAvatarIv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/userAvatarTxt"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="45dp"
            android:paddingBottom="10dp"
            android:text="App Logo"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold" />



        <EditText
            android:id="@+id/emailEdt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/email_edt"
            android:background="@drawable/input"
            android:textColorHint="@color/black"
            android:textStyle="bold"

            android:padding="15dp" />

        <EditText
            android:id="@+id/passwordEdt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/password_edt"
            android:background="@drawable/input"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:textStyle="bold"


            android:padding="15dp" />

        <EditText
            android:id="@+id/idNum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/idNum"
            android:textStyle="bold"

            android:background="@drawable/input"
            android:inputType="textPassword"
        android:textColorHint="@color/black"
            android:padding="15dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/input"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:text="@string/register_btn"
            android:padding="15dp"
            android:textStyle="bold"

            android:textColor="@color/black" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/ihaaveaccount"
            android:textSize="13sp"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lgnBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/input"
            android:layout_gravity="center"
            android:padding="15dp"
            android:textStyle="bold"

            android:text="@string/login_btn"
            android:textColor="@color/black" />



</LinearLayout>